src/objects/LAB_Google_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>client_id__c</fullName>
        <label>client_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>client_secret__c</fullName>
        <label>client_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>redirect_uri__c</fullName>
        <inlineHelpText>https://c.na9.visual.force.com/apex/googleOauth2</inlineHelpText>
        <label>redirect_uri</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>scope__c</fullName>
        <inlineHelpText>https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.email+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fuserinfo.profile+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fglass.timeline+https%3A%2F%2Fwww.googleapis.com%2Fauth%2Fglass.location</inlineHelpText>
        <label>scope</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>LAB_Google_API_Settings</label>
</CustomObject>